--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "jacobfitzp/laravel-tiptap-validation",
-    "description": "This is my package laravel-tiptap-validation",
+    "description": "Laravel validation rules for the Tiptap WYSIWYG editor.",
     "keywords": [
         "JacobFitzp",
         "laravel",
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0"
+        "spatie/laravel-package-tools": "^1.15.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.9",
         "nunomaduro/larastan": "^2.0.1",
@@ -59,14 +59,7 @@
         }
     },
     "extra": {
-        "laravel": {
-            "providers": [
-                "JacobFitzp\\LaravelTiptapValidation\\LaravelTiptapValidationServiceProvider"
-            ],
-            "aliases": {
-                "LaravelTiptapValidation": "JacobFitzp\\LaravelTiptapValidation\\Facades\\LaravelTiptapValidation"
-            }
-        }
+        "laravel": {}
     },
     "minimum-stability": "dev",
     "prefer-stable": true
